--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+body {
+  /* 使用GIF作为背景图像 */
+  background-image: url('https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2xxem9nNThmbXI5b2JqNzR3d2d4NTJtOG5ybXBobDhmdjR4YTl1YSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Bwj9Si1qsCe3Sqreip/giphy.gif');
+  
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #ffffff; /* 可以根据您的设计选择合适的背景颜色 */
+}
+
 div{
 	text-align: center;
 }
